[gd_scene load_steps=13 format=3 uid="uid://cwt8ca7xmn0u0"]

[ext_resource type="Texture2D" uid="uid://bxdgkw1qfgskw" path="res://Assets/BasicSprites/enemy.png" id="1"]
[ext_resource type="Script" path="res://Enemy/MeleeEnemy.gd" id="2"]
[ext_resource type="Script" path="res://Enemy/Common/PlayerDetectionZone.gd" id="3"]
[ext_resource type="Script" path="res://Enemy/Common/WandererController.gd" id="4"]
[ext_resource type="PackedScene" path="res://Special Effects/DamageEffects.tscn" id="5"]
[ext_resource type="AudioStream" uid="uid://cgpl5vjgrcdfn" path="res://Sound/enemyImpact.wav" id="6"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(30, 30)

[sub_resource type="CircleShape2D" id="4"]
radius = 300.0

[sub_resource type="Animation" id="5"]
resource_name = "TakesDamage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SFX/TakesDamage:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(7.72748, 9.51364),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s721v"]
_data = {
"TakesDamage": SubResource("5")
}

[node name="Enemy" type="CharacterBody2D"]
z_index = 5
z_as_relative = false
collision_layer = 16
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("2")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("3")

[node name="PlayerDetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource("4")

[node name="WandererController" type="Node2D" parent="."]
script = ExtResource("4")

[node name="Timer" type="Timer" parent="WandererController"]
one_shot = true
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 16.0
target_desired_distance = 24.0

[node name="PlayerDetectionCycle" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="DamageEffects" parent="." instance=ExtResource("5")]
visibility_rect = Rect2(-500, -500, 1000, 1000)

[node name="SFX" type="Node" parent="."]

[node name="TakesDamage" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6")
volume_db = -10.0
bus = &"SFX"

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s721v")
}

[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="WandererController/Timer" to="WandererController" method="_on_Timer_timeout"]
[connection signal="timeout" from="PlayerDetectionCycle" to="." method="_on_PlayerDetectionCycle_timeout"]
